Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49806

[qt-iOS] Video element will not resume playback after playback stalled

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS

    Description

      When network condition is bad if I play a video from network using Video element under iOS the playback will stall and never resume. But if I pause playback and then play it again the playback will continue. The expected behavior should be that Video element can automatically resume playback when buffering is ready.
      The sample program to reproduce this issue has been attached. Just run this program and click the screen the playback will start, after a while the playback may stall and never resume. Then click the screen to pause playback and click again to restart playback, this time the playback will continue.
      NOTE: Please watch the debug output message when the playback stalled, you will not see the status of Video element changed to MediaPlayer.Stalled and playbackState property will remain in MediaPlayer.PlayingState. This behavior is also incorrect.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              valentyn.doroshchuk Valentyn Doroshchuk
              jianliang79 liang jian
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes