AVF: Emit StalledMedia when unbuffered and resume playback afterwards

If remote source is requested to play but there is a limitation in network bandwidth,
StalledMedia status is never emitted, also the playback is not resumed after buffer gets full again.

Based on AVPlayerItem.playbackLikelyToKeepUp introduced changing the media status
and resuming the playback.

Task-number: QTBUG-49806
Change-Id: If8aa10a1ea2cee2a40c679871b836d2dca622fcd
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>